Update package.json for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Xavier-ZhouJixuan.github.io/ee4032_frontend",
+  "homepage": "https://github.com/Saturn-22/blackjack",
   "name": "2",
   "version": "0.1.0",
   "private": true,
