--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://saturn-22.github.io/blackjack",
+  "homepage": "https://saturn-22.github.io/BJ",
   "name": "2",
   "version": "0.1.0",
   "private": true,
